--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -4,34 +4,44 @@
 @inject TMDBClient TMDB
 
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Balazor Movie: Popular Movies</PageTitle>
+<div class="container-xx1 py-3">
+    <div>
+        <h1 class="display-6">
+            <span class="text-danger">
+                <i class="bi bi-fire"></i>
+            </span>
+            Popular Movies
+        </h1>
+    </div>
+    <div class="d-flex flex-column flex-md-row justify-content-between my-3">
+     
 
-<div class="h-100 d-flex flex-column justify-content-center align-items-center">
-
-    <h1>Hello, world!</h1>
-
-    Welcome to your new app.
-    <img src="/images/THEMOVEDBLogo.svg" class="w-25"/>
-    <button class="btn btn-primary mt-3">Primary Button</button>
-
-    @if (movies is not null)
-    {
-        <ul>
-            @foreach (PopularMovie movie in movies.Results)
+        <div class="row row-cols-2 row-cols-lg-4 row-cols-xl-5 g-3 justify-content-center justify-content-md-start">
+            @if (movies is not null)
             {
-                <li>@movie.Title</li>
-                
+
+                @foreach (PopularMovie movie in movies.Results)
+                {
+                    <div class="col">
+                        <MovieCard Movie="movie" />
+                    </div>
+                }
+
             }
-        </ul>
-    }
-    else
-    {
-        <p>Movies are still loading...</p>
-    }
-
+            else
+            {
+                for (int i = 0; i < 10; i++)
+                {
+                    <div class="col">
+                        <MovieCard />
+                    </div>
+                }
+            }
+        </div>
+    </div>
 </div>
-
-@code{
+@code {
     private PopularMoviePagedResponse? movies;
 
     protected override async Task OnInitializedAsync()
