--- a/UI/MovieCard.razor
+++ b/UI/MovieCard.razor
@@ -18,7 +18,7 @@
             </p>
         </div>
         <div class="card-footer text-end">
-            <a class="btn btn-primary" href="/">Details</a>
+            <a class="btn btn-primary" href="/movie/@Movie.Id">Details</a>
         </div>
     </div>
 }
