--- a/Pages/Movie.razor
+++ b/Pages/Movie.razor
@@ -8,14 +8,67 @@
 }
 else
 {
-    <h1>@movieDetails.Title</h1>
-    <p>@movieDetails.Overview</p>
-    
+    <PageTitle>@movieDetails.Title</PageTitle>
+    <!--   -->
+
+    <div class="hero-bg" style="@($"--bg-img: url(https://image.tmdb.org/t/p/original/{movieDetails.BackdropPath})")">
+        <div class="hero-container">
+            <div class="container-xx1 d-flex flex-column flex-md-row">
+                <!--Title content goes here -->
+                <div class="flex-grow-1 d-flex align-items-center justify-content-center jusitfy-content-md-end">
+                    <div class="title-container text-center text-md-end">
+                        <h1 class="text-light">@movieDetails.Title</h1>
+                        <h2 class="text-light">@movieDetails.Tagline</h2>
+                        @if (DateTime.TryParse(movieDetails.ReleaseDate, out DateTime releaseDate))
+                        {
+                            <span class="badge me-2 text-bg-light">@releaseDate.ToString("MMM dd yyy")</span>
+                        }
+                        @{
+                            var runtime = $"{movieDetails.Runtime / 60}h {movieDetails.Runtime % 60}m";
+                            var rating = (movieDetails.VoteAverage * 10).ToString("F1");
+                        }
+                        <span class="badge me-2 text-bg-dark">@runtime</span>
+                        <span class="badge me-2 text-bg-success">@rating% <i class="bi bi-stars"></i></span>
+                        <div class="movie-links">
+                            <div class="d-flex justify-content-center justify-content-md-end p-3">
+                                @if (string.IsNullOrEmpty(movieDetails.Homepage))
+                                {
+                                    <div class="text-center px-2">
+                                        <a href="@movieDetails.Homepage" target="_blank" class="btn btn-outline-light rounded-pill">
+                                            Website
+                                        </a>
+                                    </div>
+                                }
+                                <div class="text-center px-2">
+                                    <a href="@($"https://www.imdb.com/title/{movieDetails.ImdbId}")" target="_blank" class="btn btn-outline-warning rounded-pill">
+                                        IMDB
+                                    </a>
+                                </div>
+                                })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="order-last order-md-first d-flex justify-content-center">
+                    <div class="poster-container">
+                        @if (string.IsNullOrEmpty(movieDetails.PosterPath))
+                        {
+                            <img src="/images/PosterPlaceHolder.png" alt="Movie Poster" />
+                        }
+                        else
+                        {
+                            <img src="@($"https://image.tmdb.org/t/p/w500/{movieDetails.PosterPath}")" alt="Movie Poster" />
+                        }
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 }
 
 @code {
     [Parameter]
-    public int Id { get; set; }    
+    public int Id { get; set; }
 
     public MovieDetails? movieDetails;
 
