--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -15,7 +15,7 @@
         </h1>
     </div>
     <div class="d-flex flex-column flex-md-row justify-content-between my-3">
-     
+
 
         <div class="row row-cols-2 row-cols-lg-4 row-cols-xl-5 g-3 justify-content-center justify-content-md-start">
             @if (movies is not null)
@@ -39,13 +39,23 @@
                 }
             }
         </div>
+
     </div>
+
+    @if (movies?.TotalPages > 1)
+    {
+        <div class="my-3">
+            <Paginator CurrentPage="movies.Page"
+                       TotalPages="movies.TotalPages > 500 ? 500 : movies.TotalPages" />
+        </div>
+
+    }
 </div>
 @code {
     private PopularMoviePagedResponse? movies;
 
-    protected override async Task OnInitializedAsync()
-    {
-        movies = await TMDB.GetPopularMoviesAsync();
-    }
+    [SupplyParameterFromQuery]
+    public int Page { get; set; } = 1;
+
+    protected override async Task OnParametersSetAsync() => movies = await TMDB.GetPopularMoviesAsync(Page);
 }
