--- a/Pages/Movie.razor.css
+++ b/Pages/Movie.razor.css
@@ -24,3 +24,20 @@
     margin: 0 2rem 2rem 2rem;
     transform: translateY(50%);
 }
+
+    .poster-container img {
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: cover;
+    }
+
+.overview {
+    margin-top: 12rem;
+}
+
+@media (min-width: 992px) {
+    .overview {
+        margin-left: calc((24rem * .666) + 4rem);
+        margin-top: 2rem;
+    }
+}
