--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -2,7 +2,7 @@
 @using BlazorMovieLive.Models
 @using BlazorMovieLive.Services
 @inject TMDBClient TMDB
-
+@inject NavigationManager Nav
 
 <PageTitle>Balazor Movie: Popular Movies</PageTitle>
 <div class="container-xx1 py-3">
@@ -47,6 +47,7 @@
         <div class="my-3">
             <Paginator CurrentPage="movies.Page"
                        TotalPages="movies.TotalPages > 500 ? 500 : movies.TotalPages" />
+            OnPageChange="GetPage"
         </div>
 
     }
@@ -57,5 +58,18 @@
     [SupplyParameterFromQuery]
     public int Page { get; set; } = 1;
 
-    protected override async Task OnParametersSetAsync() => movies = await TMDB.GetPopularMoviesAsync(Page);
+    protected override async Task OnParametersSetAsync()
+    {
+
+        if (Page < 1) Page = 1;
+        else if (Page > 500) Page = 500;
+
+        movies = await TMDB.GetPopularMoviesAsync(Page);
+    }
+
+    private void GetPage(int pageNum)
+    {
+        string url = Nav.GetUriWithQueryParameter("page", pageNum);
+        Nav.NavigateTo(url);
+    }
 }
